tests/http/snapshots/http__v2__docs.snap
---
source: tests/http/v2.rs
expression: "get(\"/api/v2/docs\").without_body().send().await"
---
GET /api/v2/docs
status: 200 OK
content-type: text/html; charset=utf-8
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
<body omitted>
