tests/http/snapshots/http__v2__logs_missing_range.snap
---
source: tests/http/v2.rs
expression: get(LOGS).send().await
---
GET /api/v2/channels/11111/users/22222/logs
status: 400 Bad Request
content-type: text/plain; charset=utf-8
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
Failed to deserialize query string: missing field `from`
