tests/http/snapshots/http__v2__logs_reverse_limit.snap
---
source: tests/http/v2.rs
expression: "get(format!(\"{LOGS}?{RANGE}&reverse=true&limit=1\")).send().await"
---
GET /api/v2/channels/11111/users/22222/logs?from=2026-03-01T00:00:00Z&to=2026-04-01T00:00:00Z&reverse=true&limit=1
status: 200 OK
content-type: application/json
cache-control: no-cache
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
{
  "messages": [
    {
      "displayName": "Alice",
      "id": "00000000-0000-0000-0000-000000000005",
      "tags": {
        "badge-info": "",
        "badges": "subscriber/12",
        "color": "#FF0000",
        "display-name": "Alice",
        "emotes": "",
        "flags": "",
        "id": "00000000-0000-0000-0000-000000000005",
        "room-id": "11111",
        "subscriber": "1",
        "tmi-sent-ts": "1773594000000",
        "user-id": "22222",
        "user-type": ""
      },
      "text": "mid month",
      "timestamp": "2026-03-15T17:00:00Z"
    }
  ]
}
