tests/http/snapshots/http__v2__logs_text.snap
---
source: tests/http/v2.rs
expression: "get(format!(\"{LOGS}?{RANGE}&format=text\")).send().await"
---
GET /api/v2/channels/11111/users/22222/logs?from=2026-03-01T00:00:00Z&to=2026-04-01T00:00:00Z&format=text
status: 200 OK
content-type: text/plain; charset=utf-8
cache-control: no-cache
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
[2026-03-01 07:00:00] #testchan alice: hello world
[2026-03-01 09:00:00] #testchan alice: hello again
[2026-03-15 17:00:00] #testchan alice: mid month
