tests/http/snapshots/http__v2__resolve_login_needs_twitch.snap
---
source: tests/http/v2.rs
expression: "get(\"/api/v2/users/resolve?login=testchan\").send().await"
---
GET /api/v2/users/resolve?login=testchan
status: 503 Service Unavailable
content-type: application/problem+json
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
{
  "code": "upstream_unavailable",
  "status": 503,
  "title": "The Twitch token is not ready"
}
